[package]
name = "jetkit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
reqwest = "0.12.12"
secp256k1 = { version = "0.30.0", features = ["rand"] }
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
zeroize = "1.8.1"

[[bin]]
name = "ses"
path = "src/ses/main.rs"

[[bin]]
name = "tit"
path = "src/tit/main.rs"
