[package]
name = "jetkit"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
reqwest = "0.12.12"
secp256k1 = { version = "0.30.0", features = ["rand"] }
sha3 = "0.10.8"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
zeroize = "1.8.1"

reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.2.0" }
alloy-rlp = "0.3.11"
alloy-eips = "0.11.1"
alloy-network = "0.11.1"
alloy-signer-local = "0.11.1"
serde = { version = "1.0.218", features = ["derive"] }
alloy-primitives = "0.8.21"
serde_json = "1.0.139"
alloy-rpc-types = "0.11.1"
k256 = "0.13.4"
serde_with = "3.12.0"

[[bin]]
name = "ses"
path = "src/ses/main.rs"

[[bin]]
name = "tit"
path = "src/tit/main.rs"

[[bin]]
name = "stb"
path = "src/stb/main.rs"
